--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="buttons">
           <div class="volume">
             <i id="volume-logo" class="fa-solid fa-volume-high"></i>
-            <input id="vol-control" type="range" min="0" max="100"></input>
+            <input id="vol-control" type="range" min="0" max="100" />
           </div>
           <div>
             <span id="time-elapsed">00:00</span>
