add keyboard shortcut

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
         </div>
       </div>
     </div>
+    <div class="shortcut">
+      <h5>m &nbsp - Mute/Unmute</h5>
+      <h5><i class="fa-regular fa-circle-down"></i> - Volume Down</h5>
+      <h5><i class="fa-regular fa-circle-up"></i> - Volume Up</h5>
+      <h5><i class="fa-regular fa-circle-left"></i> - Backward seek 10s</h5>
+      <h5><i class="fa-regular fa-circle-right"></i> - Forward seek 10s</h5>
+      <h5>f &nbsp - Fullscreen</h5>
+      <h5>esc - Exit Full Screen</h5>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
