--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Player</title>
+    <link rel="stylesheet" href="reset.css" />
     <script
       src="https://kit.fontawesome.com/30d357bcb9.js"
       crossorigin="anonymous"
